--- a/src/global.less
+++ b/src/global.less
@@ -14,7 +14,7 @@ body,
 }
 
 .ant-layout {
-  height: 100vh;
+  min-height: 100vh;
 }
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
   left: unset;
