footer 固定在底部

--- a/src/global.less
+++ b/src/global.less
@@ -15,6 +15,9 @@ body,
 
 .ant-layout {
   min-height: 100vh;
+  .ant-pro-layout-content {
+    min-height: 84vh;
+  }
 }
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
   left: unset;
